--- a/src/assets/styles/home/HomePfStyle.css
+++ b/src/assets/styles/home/HomePfStyle.css
@@ -1,33 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 #portfolio {
   padding: 60px 0;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#54d0dd+0,54d0dd+0,54d0dd+0,71777d+0,414a52+100 */
-  background: #252525; /* Old browsers */
- /* background: -moz-linear-gradient(
+  
+  background: #569dc9; /* Old browsers */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#54d0dd+0,54d0dd+0,54d0dd+0,7fdce6+0,54d0dd+100 */
+  background: -moz-linear-gradient(
     top,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(113, 119, 125, 1) 0%,
-    rgba(65, 74, 82, 1) 100%
-  ); /* FF3.6-15 
+    #2d7692 ,
+    #22535f ,
+    #1c3a3d 
+  ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
     top,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(113, 119, 125, 1) 0%,
-    rgba(65, 74, 82, 1) 100%
-  ); /* Chrome10-25,Safari5.1-6 
+    #2d7692 ,
+    #22535f ,
+    #1c3a3d 
+  ); /* Chrome10-25,Safari5.1-6*/ 
   background: linear-gradient(
     to bottom,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(84, 208, 221, 1) 0%,
-    rgba(113, 119, 125, 1) 0%,
-    rgba(65, 74, 82, 1) 100%
-  );*/ /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#54d0dd', endColorstr='#414a52', GradientType=0 ); /* IE6-9 */
+    #2d7692 ,
+    #22535f ,
+    #1c3a3d 
+
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */  
+ 
 }
 
 #portfolio .h2 {
