--- a/src/assets/styles/classes/ClassesSNavStyle.css
+++ b/src/assets/styles/classes/ClassesSNavStyle.css
@@ -42,14 +42,14 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 200px;
-  padding-top: 90px;
+  width: 300px;
+  padding-top: 20px;
   background: var(--sidebar-color);
   transition: var(--tran-05);
   z-index: 2000;
 }
 #snav .sidebar.close {
-  width: 55px;
+  width: 50px;
 }
 
 /* ===== Reusable code - Here ===== */
@@ -194,7 +194,7 @@
 }
 
 #snav .sidebar .menu-bar {
-  height: calc(100% - 28px);
+  height: calc(80%);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
