--- a/src/assets/styles/home/HomeFtStyle.css
+++ b/src/assets/styles/home/HomeFtStyle.css
@@ -1,5 +1,5 @@
 #footer {
-    background: #484a4d;
+    background: #0e8c7f;
     color: rgba(247, 247, 247, 0.4);
     padding: 30px 0 25px 0;
   }
