--- a/src/assets/styles/classes/ClassesHdStyle.css
+++ b/src/assets/styles/classes/ClassesHdStyle.css
@@ -1,5 +1,5 @@
 #HeaderClasses {
-  background-color: #22535f;
+  background-color: #096192;
   width: 100%;
   height: 100%;
   background-size: aut;
