--- a/src/assets/styles/classes/ClassesSNavStyle.css
+++ b/src/assets/styles/classes/ClassesSNavStyle.css
@@ -2,9 +2,9 @@
 
 #snav {
   --body-color: #1c3a3d;
-  --sidebar-color: #19353b;
-  --primary-color: #3f9cc0;
-  --primary-color-light: #22535f;
+  --sidebar-color: #103041;
+  --primary-color: #17c591;
+  --primary-color-light: #0e8c7f;
   --toggle-color: #fff;
   --text-color: #ccc;
   --tran-03: all 0.2s ease;
@@ -41,7 +41,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 102%;
   width: 300px;
   padding-top: 20px;
   background: var(--sidebar-color);
@@ -211,7 +211,7 @@
 
 .menu-bar {
   scrollbar-width: thin;
-  scrollbar-color: var(--sidebar-color) var(--primary-color);
+  scrollbar-color: var(--primary-color) var(--sidebar-color);
 }
 
 .menu-bar::-webkit-scrollbar {
