--- a/src/assets/styles/home/HomeHdStyle.css
+++ b/src/assets/styles/home/HomeHdStyle.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-rendering: optimizeLegibility !important;
   color: #000000;
   width: 100%;
@@ -49,7 +49,7 @@ h3,
 #header .btn-custom {
   text-transform: uppercase;
   color: #ffffff;
-  background-color: #414a52;
+  background-color: #0e8c7f;
   border: 0;
   padding: 14px 20px;
   margin: 0;
@@ -64,12 +64,12 @@ h3,
 .btn-custom:active,
 .btn-custom.active {
   color: rgb(33, 139, 156);
-  background-color: #414a52;
+  background-color: #0e8c7f;
 }
 #header .btn-default {
   text-transform: uppercase;
   color: #ffffff;
-  background-color: #414a52;
+  background-color: #0e8c7f;
   border: 0;
   padding: 14px 20px;
   margin: 0;
