--- a/src/assets/styles/home/HomePfStyle.css
+++ b/src/assets/styles/home/HomePfStyle.css
@@ -6,21 +6,18 @@
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#54d0dd+0,54d0dd+0,54d0dd+0,7fdce6+0,54d0dd+100 */
   background: -moz-linear-gradient(
     top,
-    #2d7692 ,
-    #22535f ,
-    #1c3a3d 
+    #1399c6 ,
+    #24aae2 
   ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
     top,
-    #2d7692 ,
-    #22535f ,
-    #1c3a3d 
+    #1399c6 ,
+    #24aae2 
   ); /* Chrome10-25,Safari5.1-6*/ 
   background: linear-gradient(
     to bottom,
-    #2d7692 ,
-    #22535f ,
-    #1c3a3d 
+    #1399c6 ,
+    #24aae2 
 
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */  
  
