--- a/src/assets/styles/indexmax/AboutMaxS.css
+++ b/src/assets/styles/indexmax/AboutMaxS.css
@@ -14,11 +14,10 @@
   justify-content: center;
 }
 .card {
-  height: 130px ;
-  width: 150px ;
+  max-height: 300px ;
+  max-width: 400px ;
   margin: auto;
   margin-top: 25px;
-  background-color: #cccbcb !important;
   padding: 0;
   border: none;
 }
@@ -78,7 +77,7 @@
   box-shadow: none;
 }
 .colored {
-  background-color: #383838 !important;
+  background-color: #1171ba !important;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 .my-icon-share {
