--- a/src/main.css
+++ b/src/main.css
@@ -1,36 +1,3 @@
 :root {
-  --primary: #646cff;
-  --secondary: #646cff;
-  --bg-scrollbar: #1a1a1a;
-  --scrollbar-thumb: #535bf2;
-  --bg-scrollbar-hover: #4f55c2;
-}
-
-*::-webkit-scrollbar {
-  width: 0.75rem;
-}
-*::-webkit-scrollbar-track {
-  background-color: var(--bg-scrollbar);
-  border-radius: 10%;
-}
-*::-webkit-scrollbar-thumb {
-  background-color: var(--scrollbar-thumb);
-  border-radius: 10%;
-  animation-name: exit;
-  animation-duration: 150ms;
-  --tw-exit-opacity: initial;
-  --tw-exit-scale: initial;
-  --tw-exit-rotate: initial;
-  --tw-exit-translate-x: initial;
-  --tw-exit-translate-y: initial;
-}
-*::-webkit-scrollbar-thumb:hover {
-  background-color: var(--bg-scrollbar-hover);
-  animation-name: enter;
-  animation-duration: 150ms;
-  --tw-enter-opacity: initial;
-  --tw-enter-scale: initial;
-  --tw-enter-rotate: initial;
-  --tw-enter-translate-x: initial;
-  --tw-enter-translate-y: initial;
+  font-family: 'Montserrat';
 }
